--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -24,7 +24,7 @@ jobs:
         - name: Upload test results as artifact
           uses: actions/upload-artifact@v4
           with:
-            name: test-results
+            name: test-results-site
             path: horarios_professores/target/site
             
     build:
